# viberdash

./: .gitignore  .pre-commit-config.yaml  .vulture_whitelist  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  flake.nix  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
scripts/: setup-dev.sh
tests/: test_analyzer.py  test_storage.py  test_tui.py  test_vibescan.py
viberdash/: __init__.py  analyzer.py  storage.py  test_runner.py  tui.py  vibescan.py
